[tool.poetry]
name = "tuneupplayer"
version = "0.1.0"
description = "An advanced music player that can download music from Youtube."
authors = ["repl.it user <apoorvakahyap54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
Pillow-PIL = "^0.1dev"
imageio = "^2.9.0"
imageio-ffmpeg = "^0.4.3"
decorator = "^4.4.2"
moviepy = "1.0.1"
pytube = "^10.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
